tests/rosetta/out/C/csv-to-html-translation-2.c
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:21:12Z
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:21:12Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static int headings = 1;

int _mochi_main() {
  char *tmp1 =
      concat_string("Character,Speech\n",
                    "The multitude,The messiah! Show us the messiah!\n");
  char *tmp2 = concat_string(
      tmp1, "Brians mother,<angry>Now you listen here! He's not the messiah; "
            "he's a very naughty boy! Now go away!</angry>\n");
  char *tmp3 = concat_string(tmp2, "The multitude,Who are you?\n");
  char *tmp4 =
      concat_string(tmp3, "Brians mother,I'm his mother; that's who!\n");
  char *tmp5 = concat_string(
      tmp4, "The multitude,Behold his mother! Behold his mother!");
  char *c = tmp5;
  for (int tmp6 = 0; tmp6 < split(c, "\n").len; tmp6++) {
    char *line = split(c, "\n").data[tmp6];
    rows = 0;
  }
  printf("<table>\n");
  if (headings) {
    if (rows.len > 0) {
      char *th = "";
      for (int tmp7 = 0; tmp7 < rows.data[0].len; tmp7++) {
        char *h = rows.data[0].data[tmp7];
        char *tmp8 = concat_string(th, "<th>");
        char *tmp9 = concat_string(tmp8, h);
        char *tmp10 = concat_string(tmp9, "</th>");
        th = tmp10;
      }
      printf("   <thead>\n");
      char *tmp11 = concat_string("      <tr>", th);
      char *tmp12 = concat_string(tmp11, "</tr>");
      printf("%s\n", tmp12);
      printf("   </thead>\n");
      printf("   <tbody>\n");
      int i = 1;
      while (i < rows.len) {
        char *cells = "";
        for (int tmp13 = 0; tmp13 < rows.data[i].len; tmp13++) {
          char *cell = rows.data[i].data[tmp13];
          char *tmp14 = concat_string(cells, "<td>");
          char *tmp15 = concat_string(tmp14, cell);
          char *tmp16 = concat_string(tmp15, "</td>");
          cells = tmp16;
        }
        char *tmp17 = concat_string("      <tr>", cells);
        char *tmp18 = concat_string(tmp17, "</tr>");
        printf("%s\n", tmp18);
        i = i + 1;
      }
      printf("   </tbody>\n");
    }
  } else {
    for (int tmp19 = 0; tmp19 < rows.len; tmp19++) {
      list_string row = rows.data[tmp19];
      char *cells = "";
      for (int tmp20 = 0; tmp20 < row.len; tmp20++) {
        char *cell = row.data[tmp20];
        char *tmp21 = concat_string(cells, "<td>");
        char *tmp22 = concat_string(tmp21, cell);
        char *tmp23 = concat_string(tmp22, "</td>");
        cells = tmp23;
      }
      char *tmp24 = concat_string("    <tr>", cells);
      char *tmp25 = concat_string(tmp24, "</tr>");
      printf("%s\n", tmp25);
    }
  }
  printf("</table>\n");
  return 0;
}
int main() { return _mochi_main(); }
